Initial support for ERF provenance records
Update erftypes.h with TYPE_META (27).
Check for ERF_TYPE_MAX rather than some arbitrary type in ERF sanity checks. In Wireshark we recently completely removed these checks as there are only a few types before TYPE_PAD/ERF_TYPE_MAX, but leave them in for now.
Add TRACE_TYPE_ERF_META for provenance record payload.
Continue to use TRACE_RT_DATA_ERF as provenance is a valid ERF record. Note: this means that LIBTRACE_IS_META_PACKET() will currently return FALSE which may confuse some tools. Other places in the code also tend to check for TRACE_TYPE_NONDATA which isn't true here either.
Return zero for wire length of provenance records.
Don't allow snapping them (just return the same value).
Skip provenance records in l2 parsers and trace_get_payload_from_meta().
Return provenance payload for trace_get_packet_meta().

Also add support for a couple of missing ERF_TYPE_ETH_COLOR variants.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -368,7 +368,8 @@ typedef enum {
        TRACE_TYPE_PPP = 17,	     /**< PPP frames */
        TRACE_TYPE_METADATA = 18,     	/**< WDCAP-style meta-data */
        TRACE_TYPE_NONDATA = 19,		/**< Not a data packet */
-       TRACE_TYPE_OPENBSD_LOOP = 20	/**< OpenBSD loopback */
+       TRACE_TYPE_OPENBSD_LOOP = 20,	/**< OpenBSD loopback */
+       TRACE_TYPE_ERF_META = 21 /**< ERF Provenance metadata record */
 } libtrace_linktype_t;
 
 /** RT protocol base format identifiers.
