Add extra check for openssl/evp.h in configure.
On Mac OS X, it is common to have the library present but not the
header files, so the traceanon build will still fail.

This check will prevent the build from failing, but might make it
hard for Mac users to get traceanon building.

Solution: use homebrew to install openssl, then add
CPPFLAGS=-I/opt/local/include/ to your ./configure command.

--- a/configure.in
+++ b/configure.in
@@ -211,6 +211,9 @@ else
 fi
 
 AC_CHECK_LIB(crypto, EVP_EncryptInit_ex, cryptofound=1, cryptofound=0)
+if test "$cryptofound" = 1; then
+	AC_CHECK_HEADER(openssl/evp.h, cryptofound=1, cryptofound=0)
+fi
 
 # Check for libpcap
 AC_CHECK_LIB(pcap,pcap_next_ex,pcapfound=1,pcapfound=0)
@@ -693,7 +696,7 @@ fi
 reportopt "Compiled with LLVM BPF JIT support" $JIT
 reportopt "Building man pages/documentation" $libtrace_doxygen
 reportopt "Building tracetop (requires libncurses)" $with_ncurses
-reportopt "Building traceanon with CryptoPan (requires libcrypto)" $have_crypto
+reportopt "Building traceanon with CryptoPan (requires libcrypto and openssl/evp.h)" $have_crypto
 
 # Report any errors relating to missing bison, flex, etc.
 echo 
