Add packet reference counting API
This API allows users to keep track of references to libtrace
packet structures that are not being released by the per packet
processing threads, e.g. those passed to the reporter or to
any user-created pthreads.

If you only have one reference to a packet at any given time,
you won't need this API. However, if you have multiple
concurrent references, this API will allow you to ensure that the
packet is correctly freed only once all references have been
finished with.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -559,6 +559,10 @@ typedef struct libtrace_packet_t {
 	int error; /**< The error status of pread_packet */
         uint64_t internalid;            /** Internal identifier for the pkt */
         void *srcbucket;
+
+        pthread_mutex_t ref_lock;       /**< Lock for reference counter */
+        int refcount;                 /**< Reference counter */
+
 } libtrace_packet_t;
 
 #define IS_LIBTRACE_META_PACKET(packet) (packet->type < TRACE_RT_DATA_SIMPLE)
@@ -1773,7 +1777,6 @@ DLLEXPORT libtrace_packet_t *trace_copy_packet(const libtrace_packet_t *packet);
  *
  */
 DLLEXPORT void trace_destroy_packet(libtrace_packet_t *packet);
-
 
 /** Read the next packet from an input trace 
  *
