Add new config option for trace_event() -- REPLAY_SPEEDUP
This allows users to specify a "speedup factor" when using
trace_event() to replay trace files, i.e. all inter-packet
gaps will be divided by the speedup factor. This allows traces
to be replayed faster, while still preserving the same relative
gaps between packets.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1319,7 +1319,10 @@ typedef enum {
 
 	/** The hasher function for a parallel libtrace. It is recommended to
 	 * access this option via trace_set_hasher(). */
-	TRACE_OPTION_HASHER
+	TRACE_OPTION_HASHER,
+
+        /** Speed up trace file replays (via trace_event()) by this factor */
+        TRACE_OPTION_REPLAY_SPEEDUP,
 } trace_option_t;
 
 /** Sets an input config option
