Add new trace_flush_output() to public API
Can be used to force a libtrace output to dump any buffered output
to disk immediately.

Note that if the file is compressed or the output trace format
requires a trailer, the flushed file will still not be properly
readable afterwards as this will not result in any trailers
being written. You'll still have to close the file for that.

Mainly this is useful for ensuring that output file sizes grow
over time in situations where the amount of output is relatively
small, rather than staying stuck at 0 bytes until we either reach
1MB of output or the file is closed. For instance, you could have
a timer that calls trace_flush_output() every 30 seconds so that
the output file size will grow if any packets were written in the
last 30 seconds.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1536,6 +1536,11 @@ DLLEXPORT void trace_destroy_dead(libtrace_t *trace);
  */
 DLLEXPORT void trace_destroy_output(libtrace_out_t *trace);
 
+/** Flush an output trace, forcing any buffered packets to be written
+ * @param libtrace      The output trace to be flushed
+ */
+DLLEXPORT int trace_flush_output(libtrace_out_t *libtrace);
+
 /** Check (and clear) the current error state of an input trace
  * @param trace		The input trace to check the error state on
  * @return The current error status and message
