Replace AC_CHECK_FUNCS with AC_CHECK_DECLS
It seems that `AC_CHECK_FUNCS` does not correctly detect when these "functions" are implemented as macros. (I've seen this happening on macOS, and Ubuntu 16.04 with `snprintf` and `strndup` respectively.) Replacing `AC_CHECK_FUNCS` (and the similar `AC_REPLACE_FUNCS`) with `AC_CHECK_DECLS` seems to solve this problem, though I don't have access to any systems that do not have these functions to be sure that it correctly detects them as missing.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -77,7 +77,8 @@ libtrace_la_SOURCES = trace.c trace_parallel.c common.h \
 		data-struct/linked_list.c hash_toeplitz.c combiner_ordered.c \
                 data-struct/buckets.c data-struct/simple_circular_buffer.c \
 		combiner_sorted.c combiner_unordered.c \
-		pthread_spinlock.c pthread_spinlock.h
+		pthread_spinlock.c pthread_spinlock.h \
+		strndup.c
 
 if DAG2_4
 nodist_libtrace_la_SOURCES = dagopts.c dagapi.c
