--- a/configure.in
+++ b/configure.in
@@ -86,10 +86,6 @@ AC_CONFIG_LIBOBJ_DIR(lib)
 AC_FUNC_MALLOC
 AC_FUNC_REALLOC
 
-# *BSD doesn't have strndup. Currently provide our own.
-AC_REPLACE_FUNCS(strndup)
-
-
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_C_INLINE
@@ -125,7 +121,7 @@ AC_PROG_LIBTOOL
 AC_PROG_GCC_TRADITIONAL
 
 # Fail if any of these functions are missing
-AC_CHECK_FUNCS(socket strdup strlcpy strcasecmp strncasecmp snprintf vsnprintf recvmmsg)
+AC_CHECK_DECLS([socket, strdup, strlcpy, strcasecmp, strncasecmp, snprintf, vsnprintf, recvmmsg, strndup])
 
 AC_CHECK_SIZEOF([long int])
 
