Tag each packet with the start iteration of the parent trace.
Traces can be started, paused and then restarted. For some
formats (especially live ones), this will mean that buffers
containing received packets can be destroyed and recreated as
a result of that process. However, in our parallel world we might
also have lingering references to packets that lived in a
now-destroyed buffer and bad things will happen if we try to
operate on it.

To try and avoid this, we keep track of how many times a trace has
been "started" and each packet read is tagged with the start count
at the time it was read. Later processing functions can now check
if the packet was read before the most recent "start" -- if it was,
then it is potentially bogus and should be ignored.

This shouldn't change anything for the vast majority of libtrace
use-cases. Normally, pausing is only used prior to ending an
input without subsequent restarting, i.e. there is only one start
iteration.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -346,7 +346,8 @@ typedef enum {
 } libtrace_dlt_t ;
 
 /** Enumeration of link layer types supported by libtrace */
-typedef enum { 
+typedef enum {
+       TRACE_TYPE_CONTENT_INVALID = -2, /**< Packet contents are not valid */
        TRACE_TYPE_UNKNOWN = -1,		/**< Unable to determine link type */
     /* TRACE_TYPE_LEGACY = 0 		Obsolete */
        TRACE_TYPE_HDLC_POS = 1, 	/**< HDLC over POS */
@@ -566,6 +567,7 @@ typedef struct libtrace_packet_t {
 
         pthread_mutex_t ref_lock;       /**< Lock for reference counter */
         int refcount;                 /**< Reference counter */
+        int which_trace_start;          /**< Used to match packet to a started instance of the parent trace */
 
 } libtrace_packet_t;
 
