Cache packet framing length to avoid multiple calculations
Also when stripping vlan etc. headers, don't try to memmove if zero
bytes are going to be moved.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -550,6 +550,7 @@ typedef struct libtrace_packet_t {
 	int capture_length;		/**< Cached capture length */
 	int wire_length;		/**< Cached wire length */
 	int payload_length;		/**< Cached payload length */
+        int framing_length;             /**< Cached framing length */
 	void *l2_header;		/**< Cached link header */
 	libtrace_linktype_t link_type;	/**< Cached link type */
 	uint32_t l2_remaining;		/**< Cached link remaining */
