--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,11 @@
 Source: libtrace4
 Priority: optional
-Maintainer: Matt Brown <mattb@debian.org>
-Build-Depends: debhelper (>= 5.0.0), dpkg-dev (>= 1.16.1~), dh-autoreconf,
- libpcap0.8-dev, zlib1g-dev, flex, bison, doxygen, liblzma-dev, graphviz,
- libncurses5-dev, libbz2-dev, libssl-dev, libwandio1-dev
-Standards-Version: 3.9.6
+Maintainer: Brad Cowie <brad@wand.net.nz>
+Build-Depends: debhelper (>= 9), dh-autoreconf,
+ libpcap-dev, zlib1g-dev, flex, bison, doxygen, liblzma-dev, graphviz,
+ libncurses5-dev, libbz2-dev, libssl-dev, libwandio1-dev, libwandder1-dev,
+ dpdk-dev, libnuma-dev
+Standards-Version: 4.1.3
 Section: libs
 Homepage: http://research.wand.net.nz/software/libtrace.php
 
