--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,8 @@ Priority: optional
 Maintainer: Brad Cowie <brad@wand.net.nz>
 Build-Depends: debhelper (>= 9), dh-autoreconf,
  libpcap-dev, zlib1g-dev, flex, bison, doxygen, liblzma-dev, graphviz,
- libncurses5-dev, libbz2-dev, libssl-dev, libwandio1-dev, libwandder1-dev,
- dpdk-dev, libnuma-dev
+ libncurses5-dev, libbz2-dev, libssl-dev, libwandio1-dev (>= 4.0.0),
+ libwandder1-dev, dpdk-dev, libnuma-dev
 Standards-Version: 4.1.3
 Section: libs
 Homepage: http://research.wand.net.nz/software/libtrace.php
