--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -587,11 +587,17 @@ typedef struct libtrace_meta_result {
 
 typedef struct libtrace_meta {
         char *interface_name;		/**< Interface name packet was captured on */
-        char *interface_mac;		/**< Interface MAC address packet was captured on */
+        void *interface_mac;		/**< Interface MAC address packet was captured on */
         uint64_t interface_speed;	/**< Interface speed packet was captured on */
 	uint32_t interface_ipv4;	/**< Interface IP4 address packet was captured on */
-	char *interface_ipv6;		/**< Interface IP6 address packet was captured on */
+	void *interface_ipv6;		/**< Interface IP6 address packet was captured on */
 	char *interface_description;	/**< Interface description */
+	uint32_t interface_num;		/**< Interface number */
+	char *host_os;			/**< Host OS the packet was captured on */
+	uint32_t interface_fcslen;	/**< Frame check sequence length for the interface */
+	char *interface_hardware_desc;	/**< Interface hardware description string */
+	char *interface_comment;	/**< Interface comment */
+	char *capture_application;	/**< Name of the capturing application */
 } libtrace_meta_t;
 
 typedef struct libtrace_packet_cache {
@@ -3714,16 +3720,18 @@ DLLEXPORT bool trace_get_wireless_antenna(void *linkptr,
 #endif /* #ifdef __cplusplus */
 
 char *trace_get_interface_name(libtrace_packet_t *packet);
-char *trace_get_interface_mac(libtrace_packet_t *packet);
-uint64_t trace_get_interface_speed(libtrace_packet_t *packet);
-uint32_t trace_get_interface_ip4(libtrace_packet_t *packet);
-uint32_t trace_get_interface_ipv4(libtrace_packet_t *packet);
-char *trace_get_interface_ip6(libtrace_packet_t *packet);
-char *trace_get_interface_ipv6(libtrace_packet_t *packet);
+void *trace_get_interface_mac(libtrace_packet_t *packet);
+uint64_t *trace_get_interface_speed(libtrace_packet_t *packet);
+uint32_t *trace_get_interface_ip4(libtrace_packet_t *packet);
+uint32_t *trace_get_interface_ipv4(libtrace_packet_t *packet);
+void *trace_get_interface_ip6(libtrace_packet_t *packet);
+void *trace_get_interface_ipv6(libtrace_packet_t *packet);
 char *trace_get_interface_description(libtrace_packet_t *packet);
-libtrace_meta_result_t *trace_get_interface_num(libtrace_packet_t *packet);
-libtrace_meta_result_t *trace_get_host_os(libtrace_packet_t *packet);
-libtrace_meta_result_t *trace_get_tzone(libtrace_packet_t *packet);
-libtrace_meta_result_t *trace_get_app_name(libtrace_packet_t *packet);
+uint32_t *trace_get_interface_num(libtrace_packet_t *packet);
+char *trace_get_host_os(libtrace_packet_t *packet);
+uint32_t *trace_get_interface_frame_check_sequence_length(libtrace_packet_t *packet);
+char *trace_get_interface_hardware_description(libtrace_packet_t *packet);
+char *trace_get_interface_comment(libtrace_packet_t *packet);
+char *trace_get_capture_application(libtrace_packet_t *packet);
 
 #endif /* LIBTRACE_H_ */
