--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -585,6 +585,19 @@ typedef struct libtrace_meta_result {
 	uint16_t len;
 } libtrace_meta_result_t;
 
+typedef struct libtrace_meta_section_item {
+        uint16_t option;
+        uint16_t len;
+        uint8_t data_type;
+        void *data;
+} libtrace_meta_item_t;
+
+typedef struct libtrace_meta_section {
+	uint16_t section;
+	uint16_t num;
+	libtrace_meta_item_t *items;
+} libtrace_meta_t;
+
 typedef struct libtrace_meta {
         char *interface_name;		/**< Interface name packet was captured on */
         void *interface_mac;		/**< Interface MAC address packet was captured on */
@@ -598,7 +611,7 @@ typedef struct libtrace_meta {
 	char *interface_hardware_desc;	/**< Interface hardware description string */
 	char *interface_comment;	/**< Interface comment */
 	char *capture_application;	/**< Name of the capturing application */
-} libtrace_meta_t;
+} libtrace_meta_tt;
 
 typedef struct libtrace_packet_cache {
 	int capture_length;		/**< Cached capture length */
@@ -637,7 +650,7 @@ typedef struct libtrace_packet_t {
         int refcount;                 /**< Reference counter */
         int which_trace_start;          /**< Used to match packet to a started instance of the parent trace */
 
-	libtrace_meta_t meta;           /**< Meta data for the packet */
+	libtrace_meta_tt meta;           /**< Meta data for the packet */
 } libtrace_packet_t;
 
 #define IS_LIBTRACE_META_PACKET(packet) (packet->type < TRACE_RT_DATA_SIMPLE)
@@ -3719,19 +3732,23 @@ DLLEXPORT bool trace_get_wireless_antenna(void *linkptr,
 } /* extern "C" */
 #endif /* #ifdef __cplusplus */
 
-char *trace_get_interface_name(libtrace_packet_t *packet);
-void *trace_get_interface_mac(libtrace_packet_t *packet);
-uint64_t *trace_get_interface_speed(libtrace_packet_t *packet);
-uint32_t *trace_get_interface_ip4(libtrace_packet_t *packet);
-uint32_t *trace_get_interface_ipv4(libtrace_packet_t *packet);
-void *trace_get_interface_ip6(libtrace_packet_t *packet);
-void *trace_get_interface_ipv6(libtrace_packet_t *packet);
-char *trace_get_interface_description(libtrace_packet_t *packet);
-uint32_t *trace_get_interface_num(libtrace_packet_t *packet);
-char *trace_get_host_os(libtrace_packet_t *packet);
-uint32_t *trace_get_interface_frame_check_sequence_length(libtrace_packet_t *packet);
-char *trace_get_interface_hardware_description(libtrace_packet_t *packet);
-char *trace_get_interface_comment(libtrace_packet_t *packet);
-char *trace_get_capture_application(libtrace_packet_t *packet);
+int trace_destroy_meta(libtrace_meta_t *result);
+libtrace_meta_t *trace_get_interface_name(libtrace_packet_t *packet);
+libtrace_meta_t *trace_get_interface_mac(libtrace_packet_t *packet);
+libtrace_meta_t *trace_get_interface_speed(libtrace_packet_t *packet);
+libtrace_meta_t *trace_get_interface_ip4(libtrace_packet_t *packet);
+libtrace_meta_t *trace_get_interface_ipv4(libtrace_packet_t *packet);
+libtrace_meta_t *trace_get_interface_ip6(libtrace_packet_t *packet);
+libtrace_meta_t *trace_get_interface_ipv6(libtrace_packet_t *packet);
+libtrace_meta_t *trace_get_interface_description(libtrace_packet_t *packet);
+libtrace_meta_t *trace_get_interface_num(libtrace_packet_t *packet);
+libtrace_meta_t *trace_get_host_os(libtrace_packet_t *packet);
+libtrace_meta_t *trace_get_interface_frame_check_sequence_length(libtrace_packet_t *packet);
+libtrace_meta_t *trace_get_interface_hardware_description(libtrace_packet_t *packet);
+libtrace_meta_t *trace_get_interface_comment(libtrace_packet_t *packet);
+libtrace_meta_t *trace_get_capture_application(libtrace_packet_t *packet);
+libtrace_meta_t *trace_get_section_item(libtrace_packet_t *packet, uint32_t section_code,
+        uint16_t option_code);
+libtrace_meta_t *trace_get_section(libtrace_packet_t *packet, uint32_t section_code);
 
 #endif /* LIBTRACE_H_ */
